[gd_scene load_steps=23 format=3 uid="uid://bb1vnw8wd6x4y"]

[ext_resource type="Script" path="res://scripts/character/robot/Robot.gd" id="1_2bjms"]
[ext_resource type="Texture2D" uid="uid://d3886m6pjn8mu" path="res://assets/textures/SciFi_DungeonTileset16x16_0x72Like.png" id="1_vtly7"]
[ext_resource type="Script" path="res://scripts/stateMachine/StateMachine.gd" id="2_dkkwy"]
[ext_resource type="Script" path="res://scripts/stateMachine/states/StateIdle.gd" id="3_iefyn"]
[ext_resource type="Script" path="res://scripts/stateMachine/states/StateWalk.gd" id="4_3uuwe"]
[ext_resource type="Script" path="res://scripts/character/robot/RobotMoveComponent.gd" id="4_mf07t"]
[ext_resource type="Script" path="res://scripts/stateMachine/states/gun/StateGunFire.gd" id="7_2d083"]
[ext_resource type="Script" path="res://scripts/stateMachine/states/StateDeath.gd" id="7_fow78"]
[ext_resource type="Script" path="res://scripts/character/robot/RobotStateGunIdle.gd" id="9_yedj2"]
[ext_resource type="Script" path="res://scripts/character/HealthComponent.gd" id="10_vfjg1"]
[ext_resource type="AudioStream" uid="uid://dt2n1i4ikl75g" path="res://assets/sounds/Classic Arcade SFX/Hit/Hit_3.wav" id="12_4y26e"]
[ext_resource type="AudioStream" uid="uid://qixelfglslyp" path="res://assets/sounds/Classic Arcade SFX/Lasers and shooting/Shoot_2.wav" id="12_b011b"]
[ext_resource type="PackedScene" uid="uid://dwd78w1ehekv4" path="res://scenes/elements/targeter_component.tscn" id="14_ro8el"]
[ext_resource type="PackedScene" uid="uid://cttou4018gwbf" path="res://scenes/elements/shatter/shard_emitter.tscn" id="14_yk6fk"]
[ext_resource type="PackedScene" uid="uid://cdn54cspoptpy" path="res://scenes/character/health_bar.tscn" id="15_tuio7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wgqa6"]
radius = 2.0
height = 12.0

[sub_resource type="Animation" id="Animation_knswg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1e6ys"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(5, 11), Vector2i(5, 12)]
}

[sub_resource type="Animation" id="Animation_amtdy"]
resource_name = "walk"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(5, 10), Vector2i(5, 11), Vector2i(5, 12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25xmp"]
_data = {
"RESET": SubResource("Animation_knswg"),
"idle": SubResource("Animation_1e6ys"),
"walk": SubResource("Animation_amtdy")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_t1t1d"]
atlas = ExtResource("1_vtly7")
region = Rect2(152, 86, 13, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gkp2"]
size = Vector2(12, 16)

[node name="Robot" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_2bjms")
hitSound = ExtResource("12_4y26e")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_vfjg1")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("targeterComponent")]
script = ExtResource("4_mf07t")
targeterComponent = NodePath("../TargeterComponent")
speed = 50.0

[node name="MoveStateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("2_dkkwy")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="MoveStateMachine" node_paths=PackedStringArray("walkState", "deathState", "healthComponent")]
script = ExtResource("3_iefyn")
walkState = NodePath("../Walk")
deathState = NodePath("../Death")
healthComponent = NodePath("../../HealthComponent")

[node name="Walk" type="Node" parent="MoveStateMachine" node_paths=PackedStringArray("idleState", "deathState", "healthComponent")]
script = ExtResource("4_3uuwe")
idleState = NodePath("../Idle")
deathState = NodePath("../Death")
healthComponent = NodePath("../../HealthComponent")

[node name="Death" type="Node" parent="MoveStateMachine"]
script = ExtResource("7_fow78")

[node name="GunStateMachine" type="Node" parent="." node_paths=PackedStringArray("initialState")]
script = ExtResource("2_dkkwy")
initialState = NodePath("Idle")

[node name="Idle" type="Node" parent="GunStateMachine" node_paths=PackedStringArray("targeterComponent", "fireState", "marker", "timer")]
script = ExtResource("9_yedj2")
targeterComponent = NodePath("../../TargeterComponent")
fireState = NodePath("../Fire")
marker = NodePath("../../GunSprite/Marker2D")
timer = NodePath("../../Timer")

[node name="Fire" type="Node" parent="GunStateMachine" node_paths=PackedStringArray("idleState", "marker", "audioStreamPlayer")]
script = ExtResource("7_2d083")
idleState = NodePath("../Idle")
marker = NodePath("../../GunSprite/Marker2D")
isPurple = true
shootSound = ExtResource("12_b011b")
audioStreamPlayer = NodePath("../../AudioStreamPlayer2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wgqa6")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("1_vtly7")
offset = Vector2(0, -7)
hframes = 32
vframes = 16
frame = 389

[node name="ShardEmitter" parent="Sprite2D" instance=ExtResource("14_yk6fk")]
threshold = 6.0
min_impulse = 20.0
max_impulse = 40.0
lifetime = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_25xmp")
}
autoplay = "idle"

[node name="GunSprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -3)
texture = SubResource("AtlasTexture_t1t1d")
offset = Vector2(7, 0)

[node name="Marker2D" type="Marker2D" parent="GunSprite"]
position = Vector2(14, -1)

[node name="HitZone" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitZone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_5gkp2")

[node name="TargeterComponent" parent="." instance=ExtResource("14_ro8el")]
maxDistance = 300.0

[node name="Timer" type="Timer" parent="."]

[node name="HealthBar" parent="." node_paths=PackedStringArray("healthComponent") instance=ExtResource("15_tuio7")]
offset_top = -16.0
offset_bottom = -15.0
healthComponent = NodePath("../HealthComponent")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0
bus = &"sfx"
